# mac-dock

./: README.md  package.json  setup.cfg  setup.py
scripts/: dock  dock-add-app  dock-add-folder  dock-apps  dock-folders  dock-rm
tests/mac-dock/examples/: apps.sh  folders.sh
