# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-dock
version = 2019.5.10
url = https://github.com/looking-for-a-job/mac-dock
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Dock

[options]
install_requires = 
	setuptools
scripts = 
	scripts/dock
	scripts/dock-add-app
	scripts/dock-add-folder
	scripts/dock-apps
	scripts/dock-folders
	scripts/dock-rm
